# kollekt

./: .gitignore  Pipfile  README.md  __main__.py  pyproject.toml
kollekt/lab/: sample.py
kollekt/search/: __init__.py
