[tool.poetry]
name = "__kollekt__"
version = "0.1.0"
description = "Kollekt"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "ˆ3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"